# utakata-vowel-lattice

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: work_package.md
assets/carriers/: .gitkeep
configs/: generation.yml
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: AGENT_PROMPTS.md  AGENT_TASK_QUEUE.md  AUDIO_DESIGN.md  CONCEPT.md  CORPUS_DESIGN.md  IMPLEMENTATION_CONTRACTS.md  LOCAL_ANALYSIS_PLAN.md  MODEL_DESIGN.md  RESOURCE_COLLECTION.md  SETUP.md  TODO.md  WORK_PACKAGES.md
scripts/: analyze_corpus.py  analyze_sequence.py  bootstrap.sh  doctor.py  generate_events.py
src/utakata_vowel_lattice/: __init__.py  analysis.py  corpus_io.py  entropy.py  formant.py  overlap_markov.py  phonology.py  prosody_lattice.py
tests/: test_phonology.py
